B-F Sandbox Full-Backup/src/objects/Venue__c.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Venues</relationshipLabel>
        <relationshipName>Venues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Area_Type__c</fullName>
        <label>Area Type</label>
        <picklist>
            <controllingField>Channel__c</controllingField>
            <picklistValues>
                <fullName>Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beer Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocktail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Down Stairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front/Main</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lounge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Night Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1 Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2 Main Stream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3 Barn Big Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Up Stairs</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Code__c</fullName>
        <description>Unique row identifier.</description>
        <externalId>true</externalId>
        <label>Legacy Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <picklist>
            <controllingField>Area_Type__c</controllingField>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venue_Name__c</fullName>
        <description>Venue Name</description>
        <label>Venue Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Venue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AccountNumber__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Contact_00NV0000000KhQIMA0</fullName>
        <active>true</active>
        <field>Contact.Venue__c</field>
        <filterItems>
            <field>Venue__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Contact_Venue</name>
        <sourceObject>Contact</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I300000017Oj1EAE_00NQ0000000zqjyMAA</fullName>
        <active>true</active>
        <field>Promotion__c.Venue__c</field>
        <filterItems>
            <field>Venue__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Promotion_Venue</name>
        <sourceObject>Promotion__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I300000017yEbEAI_00NQ0000000zi6KMAQ</fullName>
        <active>true</active>
        <field>Outlet_Visit__c.Venue__c</field>
        <filterItems>
            <field>Venue__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Outlet Visit_Venue</name>
        <sourceObject>Outlet_Visit__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IV00000004PEqMAM_00NV0000000KhZZMA0</fullName>
        <active>true</active>
        <field>Asset__c.Venue__c</field>
        <filterItems>
            <field>Venue__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Asset_Venue</name>
        <sourceObject>Asset__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IV00000004PoZMAU_00NV0000000Llz1MAC</fullName>
        <active>true</active>
        <field>Asset_Move__c.New_Venue_Lookup__c</field>
        <filterItems>
            <field>Venue__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.New_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Asset Move_Venue</name>
        <sourceObject>Asset_Move__c</sourceObject>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IV00000004PoZMAU_00NV0000000LlzaMAC</fullName>
        <active>true</active>
        <field>Asset_Move__c.Previous_Venue__c</field>
        <filterItems>
            <field>Venue__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Fridge_Depot__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Asset Move_Previous Venue</name>
        <sourceObject>Asset_Move__c</sourceObject>
    </namedFilters>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>